# macos-active-window

./: LICENSE  README.md  pyproject.toml
src/macos_active_window/: macos_active_window.py
