[tool.poetry.scripts]
get-active-window = "macos_active_window.macos_active_window:run"

[tool.poetry]
name = "macos-active-window"
version = "0.1.0"
description = "Write the active window to stdout"
authors = ["Dylan Semler <dylan.semler@gmail.com>"]
license = "Public Domain"

[tool.poetry.dependencies]
python = "^3.10"
pyobjc = "^9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
